--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>&PROJECT_NAME&</title>
+		<title>VercelDeployTest</title>
 	</head>
 
 	<body
